<resources>
    <string name="app_name">팅팅플레이스</string>
    <string name="kakao_app_key">3d6f924f4e483cf1834b397c4d693cf1</string>
    <string name="title_home">홈</string>
    <string name="title_pocha">포차찾기</string>
    <string name="title_profile">내정보</string>
    <string name="title_more">더보기</string>
    <string name="recent_pocha">최근 간 포차</string>
    <string name="more">더보기</string>
    <string name="empty_recent">최근 간 포차가 없습니다.</string>
    <string name="liked_pocha">찜한 포차</string>
    <string name="notice_title">공지</string>
    <string name="notice">팅팅플레이스 새로운 버전이 출시 되었습니다!</string>
    <string name="event">오픈 이벤트 개최합니다. 많이참여하세요.</string>
    <string name="event_title">이벤트</string>
    <string name="profile_recent">최근 간 포차</string>
    <string name="profile_liked">찜한 포차</string>
    <string name="profile_reviewed">나의 리뷰</string>
    <string name="profile_shop">아이템 상점</string>
    <string name="profile_orders">아이템 보관함</string>
    <string name="profile_recommended">친구에게 같이놀자 조르기</string>
    <string name="no_result">그 지역에 팅팅 플레이스 제휴점이 없습니다.\n열심히 뛰도록 하겠습니다..! 죄송합니다.</string>
    <string name="button_review">리뷰작성</string>
    <string name="button_edit">편집</string>
    <string name="button_cancel">취소</string>
    <string name="button_delete">삭제</string>
    <string name="qr_scan_guide">현재 착석하신 테이블에 부착되어 있는\nQR코드를 찍어주세요.</string>
    <string name="qr_sub_guide">방문하신 포차에서 더욱 즐겁게 놀 수 있습니다!</string>
    <string name="pocha_intro_header">매장소개</string>
    <string name="pocha_menu_header">메뉴소개</string>
    <string name="pocha_review_header">리뷰</string>
    <string name="pocha_information_header">매장정보</string>
    <string name="info_address">주소</string>
    <string name="button_copy">주소복사</string>
    <string name="info_phone">전화번호</string>
    <string name="info_work_time">운영시간</string>
    <string name="button_go_to_location">지도로 찾아가기</string>
    <string name="total_points_text">전체 누적 평점</string>
    <string name="only_photo_checkbox">포토 후기만 보기</string>
    <string name="button_next">다음</string>
    <string name="header_nickname">닉네임</string>
    <string name="header_gender">성별</string>
    <string name="gender_male">남자</string>
    <string name="gender_female">여자</string>
    <string name="guide_nickname">2~8자 사이 한글 또는 영문으로 입력해주세요!</string>
    <string name="button_done">완료</string>
    <string name="guide_profile_picture">기본 이미지 또는 내 앨범에서 사진을 선택하세요.</string>
    <string name="hint_nickname">닉네임을 입력하세요.</string>
    <string name="button_save">수정완료</string>
    <string name="profile_coin_header">보유 코인 현황</string>
    <string name="sort_rating">평점순</string>
    <string name="dialog_sort_by">정렬기준</string>
    <string name="text_current_location">현 위치로 재검색</string>
    <string name="text_dialog_map">지도로 위치 지정</string>
    <string name="dialog_location">내 위치 지정</string>
    <string name="text_dialog_share_kakao">카카오톡</string>
    <string name="text_dialog_share_sms">SMS</string>
    <string name="text_dialog_share_url">URL 복사</string>
    <string name="text_dialog_share">공유하기</string>
    <string name="can_for_review_header">작성 가능 리뷰</string>
    <string name="no_reviewed">작성 가능 리뷰가 없습니다.</string>
    <string name="can_review">작성한 리뷰가 없습니다.</string>
    <string name="can_reviewed_header">작성한 리뷰</string>
    <string name="header_rating">별점</string>
    <string name="review_hint">사진과 함께 리뷰 작성시 매우매우 도움이 됩니다. 포차에 대한 솔직한 리뷰를 남겨주세요, (10자 이상).</string>
    <string name="button_submit">작성완료</string>
    <string name="more_notice">공지사항</string>
    <string name="more_event">이벤트</string>
    <string name="more_contact">1:1 문의</string>
    <string name="more_preference">환경설정</string>
    <string name="toolbar_contact">1:1 문의</string>
    <string name="toolbar_new_question">새 문의 작성</string>
    <string name="guide_question">티팅 플레이스 이용 중 불편하신 점을 문의주시면 최대한 빠른 시일내에 답변 드리겠습니다.</string>
    <string name="question_hint">문의하실 내용을 10자이상 작성해주세요.</string>
    <string name="settings_message_not">메세지 알림</string>
    <string name="settings_game_not">게임 수신</string>
    <string name="settings_event_not">이벤트 및 공지사항 알림</string>
    <string name="text_zero">0</string>
    <string name="dialog_text_total">총 %1$d 명</string>
    <string name="button_confirm">확인</string>
    <string name="dialog_number_of_people">내 테이블 인원수</string>
    <string name="button_game">게임하기</string>
    <string name="text_chat">채팅하기</string>
    <string name="text_game_request">게임신청</string>
    <string name="hint_table">테이블 번호 검색</string>
    <string name="text_by_number">번호 순</string>
    <string name="text_table_number">%1$d 번 테이블</string>
    <string name="text_game_gift_details">게임/선물 내역</string>
    <string name="text_settings">환경설정</string>
    <string name="text_leave">나가기</string>
    <string name="text_chat_not">채팅 알림</string>
    <string name="dialog_pocha_settings">환경설정</string>
    <string name="text_chatting">채팅하기</string>
    <string name="text_table_chatting">테이 채팅</string>
    <string name="text_1_1_chatting">1:1 채팅</string>
    <string name="text_time">시간</string>
    <string name="text_item_name">상품명</string>
    <string name="text_item_kind">수령방식</string>
    <string name="text_item_price">상품가격</string>
    <string name="dialog_hashtag">제목 입력</string>
    <string name="guide_hashtag">제목 입력</string>
    <string name="header_hashtag">해시 태그</string>
    <string name="text_send_gift">선물보내기</string>
    <string name="header_nearby">다른 술집 현황</string>
    <string name="text_no">아니오</string>
    <string name="text_yes">예</string>
    <string name="exit_message">나가기 이후 게임, 채팅, 선물 등 이용이 불가능합니다. 재입장시 QR코드 촬영이 다시 필요합니다.\n나가시겠습니까?</string>
    <string name="exit_title">나가기</string>
    <string name="text_my_profile_exit">내 프로필 수정</string>
    <string name="dialog_create_room">방만들기</string>
    <string name="text_allow_random">다른술집과 랜덤매칭 포함</string>
    <string name="text_help">도움말 보기</string>
    <string name="header_game_kind">게임종류</string>
    <string name="button_create_room">방만들기</string>
    <string name="text_basket">장바구니</string>
    <string name="text_total_amount">총 금 액 :</string>
    <string name="button_gift">선물하기</string>
    <string name="confirm_send_gift">%d번 테이블에 선물을 보내시겠습 니까?</string>
    <string name="button_game_apply">게임신청</string>
    <string name="pre_game_request_negative">취소</string>
    <string name="pre_game_request_positive">예</string>
    <string name="pre_game_notice_positive">수락</string>
    <string name="pre_game_notice_negative">거절</string>
    <string name="pre_game_notice_text">%d번테이블에서 게임 신청을 하셨습니다</string>
    <string name="pre_game_request_text">%d번 테이블 %s님께 게임 신청을 하시겠습니까?</string>
    <string name="pre_game_request_title">게임신청</string>
    <string name="pre_game_notice_title">게임수락</string>
    <string name="button_matching">게매칭중</string>
    <string name="text_last_game_winner">이전 게임 승자</string>
    <string name="text_winner_name">%d번 테이블 %s님 축하드립니다!</string>
    <string name="text_game_description">게임설명</string>
    <string name="text_game_status_playing">게임중</string>
    <string name="text_game_status_waiting">대기중</string>
    <string name="button_game_delete">방삭제</string>
    <string name="button_game_random_matching">랜덤매칭</string>
    <string name="text_my_table">내 테이블</string>
    <string name="text_beginning_of_chat">새로운 유저와 채팅을 시작합니다.</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="text_message_info">대화 상대</string>
    <string name="text_leave_chat">방을 나가시겠습니까?</string>
    <string name="text_leave_chat_title">알림</string>
    <string name="button_select_location">위치 지정 완료</string>
    <string name="title_select_location">지도로 위치 지정</string>
    <string name="text_time_left">채팅 이용권 사용중</string>
    <string name="text_shop_tip_header"><![CDATA[< TIP >]]></string>
    <string name="text_shop_tip">코인 사용없이 채팅을 자유롭게 하고싶다면 자유이용권을 구매하세요.\n\n모든 채팅은 1:1 게임을 최소 1판 즐겨야 이용하실수 있습니다.\n\n채팅 자유이용권 이용시 채팅방의 개수는 최대 5개로 제한됩니다.</string>
    <string name="text_shop_chatting">chatting</string>
    <string name="text_shop_30">30</string>
    <string name="text_shop_30_background">-      -</string>
    <string name="text_duration">" 자유이용권"</string>
    <string name="text_x">×</string>
    <string name="text_duration_30">채팅 30분</string>
    <string name="text_duration_60">채팅 1시간</string>
    <string name="text_price">₩%s</string>
    <string name="button_shop">아이템 상점</string>
    <string name="button_use">사용하기</string>
    <string name="button_in_use">사용중</string>
    <string name="button_orders">아이템 보관함</string>
    <string name="dialog_no_coin_title">남은 코인이 부족합니다.</string>
    <string name="dialog_coin_help">코인 도움말</string>
    <string name="header_coin_help_gain">코인 획득</string>
    <string name="header_coin_help_lose">코인 사용</string>
</resources>
