<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.ballboycorp.tingting.contact.add.NewQuestionViewModel"/>

        <variable
            name="clickHandler"
            type="com.ballboycorp.tingting.contact.add.NewQuestionActivity.ClickHandler" />
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorWhite">
        <include
            layout="@layout/toolbar"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="12dp"
            android:paddingTop="20dp"
            android:paddingRight="12dp"
            android:paddingBottom="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_above="@id/button_submit">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:textSize="12sp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:textColor="@color/colorBlackThird"
                    android:lineSpacingExtra="4sp"
                    android:gravity="center"
                    android:id="@+id/text_guide"
                    android:text="@string/guide_question" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="7"
                    android:layout_marginTop="16dp"
                    android:hint="@string/question_hint"
                    android:gravity="start"
                    android:padding="7dp"
                    android:text="@={viewModel.title}"
                    android:background="@drawable/shape_rectangle_outline_grey"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:lineSpacingExtra="0sp"
                    android:textColor="@color/colorRed"
                    android:textSize="12sp"
                    android:text="@{viewModel.guide}"
                    tools:text="@string/guide_nickname" />

            </LinearLayout>

            <Button
                android:id="@+id/button_submit"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginTop="15dp"
                android:layout_alignParentBottom="true"
                android:background="@drawable/default_button"
                android:enabled="@{viewModel.canSubmit ? true: false }"
                android:onClick="@{() -> clickHandler.onClickSubmit()}"
                android:text="@string/button_submit"
                android:textColor="@color/colorWhite" />
        </RelativeLayout>
    </LinearLayout>


</layout>