<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.ballboycorp.tingting.main.pocha.nearby.dialog.LocationOptionViewModel"/>
        <variable
            name="clickHandler"
            type="com.ballboycorp.tingting.main.pocha.nearby.dialog.LocationOptionDialog.ClickHandler"/>
    </data>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:onClick="@{()-> clickHandler.onClickExit()}"
                app:srcCompat="@drawable/ic_exit"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorBlackSecond"
                android:lineSpacingExtra="0sp"
                android:gravity="center_horizontal"
                android:text="@string/dialog_location" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                android:onClick="@{() -> clickHandler.onClickLocationType(0)}"
                android:gravity="center_horizontal">
                <ImageView
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:src="@drawable/ic_current_location"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/colorBlackSecond"
                    android:lineSpacingExtra="0sp"
                    android:gravity="center_horizontal"
                    android:text="@string/text_current_location"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                android:onClick="@{() -> clickHandler.onClickLocationType(1)}"
                android:gravity="center_horizontal">
                <ImageView
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:src="@drawable/ic_dialog_map"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/colorBlackSecond"
                    android:lineSpacingExtra="0sp"
                    android:gravity="center_horizontal"
                    android:text="@string/text_dialog_map"
                    />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</layout>